@@ -1,3 +1,9 @@
+2010-04-27  David King  <davidk@openismus.com>
+
+	Further documentation main page improvements
+
+	* libxml++/libxml++.h: Some minor improvements.
+
 2010-04-23  David King  <davidk@openismus.com>
 
 	Documentation main page improvements
